--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,7 @@ dependencies {
     api 'com.rengwuxian.materialedittext:library:2.1.4'
 
     implementation(name: 'crpblelib-1.3.4', ext: 'aar')
+    api 'com.github.bumptech.glide:glide:4.0.0'
+
 
 }
