--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     api 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-
+//    implementation project(':picture_library')
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'org.greenrobot:eventbus:3.0.0'
     implementation 'com.google.code.gson:gson:2.8.2'
@@ -47,7 +47,9 @@ dependencies {
     api 'com.rengwuxian.materialedittext:library:2.1.4'
 
     implementation(name: 'crpblelib-1.3.4', ext: 'aar')
+    implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.2.3'
     api 'com.github.bumptech.glide:glide:4.0.0'
+//    compile project(path: ':picture_library')
 
 
 }
