--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,10 +19,21 @@ android {
             storePassword '123456'
         }
     }
+
     buildTypes {
         release {
+            shrinkResources true
+            minifyEnabled true//如果打正式带签名的包，这里 为true，开启混淆
+            debuggable false //关闭日志调试
+            proguardFiles getDefaultProguardFile ('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
+        }
+
+        debug {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            shrinkResources false
+            signingConfig signingConfigs.config
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
