--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,7 +64,11 @@ dependencies {
     // 多dex 打包的类库
     api 'com.android.support:multidex:1.0.3'
     api 'com.rengwuxian.materialedittext:library:2.1.4'
+    implementation 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
+
     implementation project(':picture_library')
+    implementation files('libs/alipaySdk-20180403.jar')
+
     implementation(name: 'crpblelib-1.3.4', ext: 'aar')
 //    implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.2.3'
     api 'com.github.bumptech.glide:glide:4.0.0'
