--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,7 @@
         <activity android:name=".ui.activity.mine.MineAskActivity" android:screenOrientation="portrait"/>
         <activity android:name=".ui.activity.mine.SearchRecordDetailsActivity" android:screenOrientation="portrait" />
         <activity android:name=".ui.activity.home.PayCentreActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".ui.activity.mine.InterrogationDetailsActivity" android:screenOrientation="portrait"/>
 
         <!--手环-->
         <activity android:name="com.crrepa.ble.trans.upgrade.NotificationActivity"/> />
