--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,7 @@ dependencies {
 //    implementation 'com.github.LuckSiege.PictureSelector:picture_library:v2.2.3'
     api 'com.github.bumptech.glide:glide:4.0.0'
 //    compile project(path: ':picture_library')
+    implementation 'com.dinuscxj:circleprogressbar:1.1.1'
 
 
 }
