--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,9 @@
         android:theme="@style/AppTheme"
         android:hardwareAccelerated="true"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true"
+        >
+
         <!--android9闪退-->
         <uses-library
             android:name="org.apache.http.legacy"
