设备开关控制

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
 
     <uses-feature android:name="android.hardware.bluetooth_le" android:required="true"/>
 
+    <!--读取电话的状态信息的权限-->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <!--处理拨出电话，允许程序监视,修改或放弃播出电话-->
+    <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
     <application
         android:name=".ui.AppContext"
         android:allowBackup="true"
@@ -70,6 +74,16 @@
         <activity android:name="com.crrepa.ble.trans.upgrade.NotificationActivity"/> />
 
         <service android:name="com.crrepa.ble.trans.upgrade.DfuService"/>
+
+        <service android:name="com.app.aihealthapp.ui.activity.service.PhoneListenService"/>
+
+        <service android:name="com.app.aihealthapp.ui.activity.service.NotifyService"
+            android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
+            <intent-filter android:priority="1000">
+                <action android:name="android.service.notification.NotificationListenerService" />
+            </intent-filter>
+        </service>
+        <!--消息通知监听服务-->
 
         <activity
             android:name="com.alipay.sdk.app.H5PayActivity"
