--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     api 'com.github.bumptech.glide:glide:4.0.0'
 //    compile project(path: ':picture_library')
     implementation 'com.dinuscxj:circleprogressbar:1.1.1'
+    implementation "com.android.support:support-v13:28.0.0"
 
 
 }
