--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     implementation 'com.android.support:design:28.0.0'
+    implementation files('libs/universal-image-loader-1.9.5.jar')
 
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     api 'com.jakewharton:butterknife:8.8.1'
@@ -74,6 +75,9 @@ dependencies {
 //    compile project(path: ':picture_library')
     implementation 'com.dinuscxj:circleprogressbar:1.1.1'
     implementation "com.android.support:support-v13:28.0.0"
+    implementation files('libs/Android_Map3D_SDK_V6.6.0_20181221.jar')
+    implementation 'com.amap.api:location:latest.integration'
+
 
 
 }
