高德地图 上传城市编码

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,6 +71,8 @@
         <activity android:name=".ui.activity.mine.InterrogationDetailsActivity" android:screenOrientation="portrait"/>
         <activity android:name=".ui.activity.mine.TakePhotoActivity" android:screenOrientation="portrait"/>
         <activity android:name=".ui.activity.mine.AdvisoryDetailsActivity" />
+        <activity android:name=".core.pictureviewer.ImagePagerActivity" />
+
         <activity
             android:name="com.app.aihealthapp.core.permission.PermissionActivity"
             android:configChanges="keyboardHidden|orientation|screenSize"
