--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,6 +72,7 @@
         <activity android:name=".ui.activity.mine.TakePhotoActivity" android:screenOrientation="portrait"/>
         <activity android:name=".ui.activity.mine.AdvisoryDetailsActivity" />
         <activity android:name=".core.pictureviewer.ImagePagerActivity" />
+        <activity android:name=".ui.activity.home.SleepActivity" android:screenOrientation="portrait"/>
 
         <activity
             android:name="com.app.aihealthapp.core.permission.PermissionActivity"
