--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,6 +76,7 @@
         <activity android:name=".ui.activity.home.SleepActivity" android:screenOrientation="portrait"/>
         <activity android:name=".ui.activity.mine.OrderWebActyivity"/>
         <activity android:name=".ContactList.Activity01"/>
+        <activity android:name=".ui.activity.home.CheckCityActivity"/>
 
         <activity
             android:name="com.app.aihealthapp.core.permission.PermissionActivity"
