集成极光推送

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,4 +103,6 @@ dependencies {
 
     implementation 'cn.jiguang.sdk:jpush:3.3.9'  // 此处以JPush 3.3.9 版本为例。
     implementation 'cn.jiguang.sdk:jcore:2.1.6'  // 此处以JCore 2.1.6 版本为例。
+    implementation 'com.allenliu.versionchecklib:library:2.2.1'
+
 }
