--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,7 @@ dependencies {
     implementation files('libs/library.jar')
     implementation files('libs/pinyin4android1.0.jar')
     implementation files('libs/pinyin4j-2.5.0.jar')
+    implementation 'com.alibaba:fastjson:1.2.47'
 
 
     implementation(name: 'crpblelib-1.3.7', ext: 'aar')
